to give myself an idea on how the modal will look when fed with social media content i added a twitter feed. obviously will have to limit a the amount of info received for visual appeal. the social media icons will act as sharing buttons. the plus (+) icon will allow you report a crime from the modal.

--- a/frontEndFiles/resources/css/main.css
+++ b/frontEndFiles/resources/css/main.css
@@ -1,7 +1,7 @@
 /*====MAIN CSS====*/
 
 html, body {
-
+  position: absolute !important;
 }
 
 h1 {
@@ -10,4 +10,7 @@ h1 {
 
 p{
 
+}
+.modal {
+  position: initial!important;
 }
