--- a/frontEndFiles/resources/css/main.css
+++ b/frontEndFiles/resources/css/main.css
@@ -1,13 +1,75 @@
 /*====MAIN CSS====*/
 
-html, body {
+html, body {}
 
+h1 {}
+
+p {}
+
+/* ===appLoader CSS=== */
+
+#text {
+  text-align: center;
+  font-family: monospace;
+  font-size: 0.8rem;
 }
 
-h1 {
-
+.loader {
+  font-size: 17px;
+  position: relative;
+  width: 4em;
+  height: 1em;
+  margin: 100px auto;
 }
 
-p{
+.dot {
+  width: 1em;
+  height: 1em;
+  border-radius: 0.5em;
+  background: #333;
+  position: absolute;
+  animation-duration: 0.5s;
+  animation-timing-function: ease;
+  animation-iteration-count: infinite;
+}
 
+.dot1, .dot2 {
+  left: 0;
+}
+
+.dot3 {
+  left: 1.5em;
+}
+
+.dot4 {
+  left: 3em;
+}
+
+@keyframes reveal {
+  from {
+    transform: scale(0.001);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+@keyframes slide {
+  to {
+    transform: translateX(1.5em)
+  }
+}
+
+.dot1 {
+  animation-name: reveal;
+}
+
+.dot2, .dot3 {
+  animation-name: slide;
+}
+
+.dot4 {
+  animation-name: reveal;
+  animation-direction: reverse;
+  /* thx @HugoGiraudel */
 }
