due to merging conflicts i  commented out the - loader {position: relative} in the main.css then moved it to my appLoader.html file. the issue will be properly dealt with later when we work on the entire styling of all the pages.

--- a/frontEndFiles/resources/css/main.css
+++ b/frontEndFiles/resources/css/main.css
@@ -16,7 +16,8 @@ p {}
 
 .loader {
     font-size: 17px;
-    position: relative;
+    /* commented this out due to merging conflicts(moved it into the html file appLoader.html) */
+    /* position: relative; */
     width: 4em;
     height: 1em;
     margin: auto;
