--- a/frontEndFiles/resources/css/main.css
+++ b/frontEndFiles/resources/css/main.css
@@ -1,3 +1,50 @@
+/*====MAIN CSS====*/
+
+html, body {
+  position: initial !important;
+}
+
+h1 {
+
+}
+
+p{
+
+}
+.modal {
+  position: initial!important;
+}
+
+/* ===appLoader CSS=== */
+
+#text {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 0.8rem;
+}
+
+.loader {
+    font-size: 17px;
+    position: relative;
+    width: 4em;
+    height: 1em;
+    margin: auto;
+    margin-top: 272px;
+}
+
+.dot {
+  width: 1em;
+  height: 1em;
+  border-radius: 0.5em;
+  background: #333;
+  position: absolute;
+  animation-duration: 0.5s;
+  animation-timing-function: ease;
+  animation-iteration-count: infinite;
+}
+
+.dot1, .dot2 {
+  left: 0;
 }
 
 .dot3 {
@@ -34,5 +81,6 @@
 .dot4 {
   animation-name: reveal;
   animation-direction: reverse;
-  /* thx @HugoGiraudel */
 }
+
+/*===========END============*/
