--- a/frontend/src/css/main.scss
+++ b/frontend/src/css/main.scss
@@ -12,7 +12,7 @@ body {
   flex: auto;
   overflow: auto;
   position: relative;
-  
+
 }
 
 .main-content {
@@ -40,7 +40,49 @@ body {
   border-radius: 50%;
   background-color: #029C9A
 }
+.container{
+  position:fixed;
+  top:0;
 
+  display: none;
+
+
+}
+#crime-type{
+  
+
+
+}
+button{
+
+
+}
+button:active,button:focus{
+  border-color:none;
+  outline:none;
+
+}
+
+img{
+  width:100%;
+  height: 100%;
+}
+
+ .list-group .list-group-item{
+   border:none !important;
+   padding:0px !important;
+   margin: 0px !important;
+   border-radius: 0px !important;
+ }
+.list-group-item .btn-danger{
+  margin: 1% !important;
+  border-radius: 0px !important;
+
+
+}
+.list-group{
+  margin: 0px !important;
+}
 
 
 
@@ -55,7 +97,7 @@ body {
   font-size: 0.7rem;
   background-color: rgba(255, 0, 0, 1);
   color: white;
-  
+
 
 }
 .loader{
@@ -96,4 +138,3 @@ body {
    transform: translate(-50%,-50%);
  }
 }
-
