--- a/frontend/src/css/main.scss
+++ b/frontend/src/css/main.scss
@@ -182,7 +182,8 @@ height: auto;
 }
 .container-fluid{
   display: none;
-  padding-top: 20%;
+  padding-top: 0%;
+  border:none !important;
   
   
 }
@@ -190,14 +191,78 @@ height: auto;
   margin-top: 5%
 }
 .list-group{
-  border:none !important;
-  padding: 0 !important;
+  border:none;
+  
 
 }
 .list-group .list-group-item{
-  border:none !important;
-  margin: 0 !important;
-  padding: 0 !important;
+  text-align: left;
+ border-left:0px;
+ border-right:0px;
+ border-color: none;
+font-size: 2.2rem;
+ border-radius: 0px;
+
+}
+#backbutton{
+  padding: 20%;
+  color:red;
+margin-top:5%;
+margin-bottom: 20%;
+}
+
+
+.modal{
+  
+  padding-top:10%;
+
+}
+
+.modal-dialog-centered{
+  
+  padding-top:15%;
+}
+.modal-content{
+  
+  
+  height: 100vh;
+  
+}
+.form-control{
+  font-size: 1.5rem;
+  color: black;
+}
+.modal-title{
+  font-size: 2rem;
+}
+.form-group{
+  
+  font-size:2rem;
+}
+.modal-header{
+  margin-top:20%;
+  font-size:2rem
+}
+.modal-body{
+  height: 100%;
+}
+.btn-primary{
+  position: fixed;
+  bottom: 10%;
+  left: 40%;
+}
+ .glyphicon-chevron-left{
+ 
+ 
+ color: rgb(172, 166, 166);
+ 
+ font-size:3rem;
+}
+
+.container{
+  
+  padding: 0px !important;
+  background: transparent;
 }
 /* Clearfix (clear floats) */
 .row::after {
